Changes from Version 1.1.1 to 1.2.0
	* Added GurobiFindAllSolutions 
	* Added IndexSetToCharacteristicVector
	* Added CharacteristicVectorToIndexSet
	* Added SubsetToCharacteristicVector
	* Added CharacteristicVectorToSubset
	* Minor bug fix for installation process

Changes from Version 1.1.0 to Version 1.1.1
	* Changed make process to allow for different versions of Gurobi to be handled automatically
	* Added signal handling to allow a Gurobi optimisation to be interrupted with ctrl+C
	* Fixed formatting of the examples
	* Fixed the test harness
	* Added example LP to documentation

Changes from Version 1.0.0 to Version 1.1.0
	* Added GurobiSetLogToConsole command
	* Added GurobiLogToConsole command
	* Changed output log file to be off by default
	* Changed GurobiDeleteConstraintsWithName to only update the model at the end, to increase speed.
	* Added GurobiDeleteConstraints
	* Added GurobiDeleteSingleConstraint
	* Added GurobiStringAttributeElement
	* Minor bug fixes
	* Updated documentation, including adding a troubleshooting section.