@@ -1,5 +1,7 @@
 Changes from Version 1.1.1 to 1.2.0
-	* Added GurobiFindAllSolutions 
+	* Added GurobiFindAllBinarySolutions
+	* Added GurobiVariableTypes
+	* Added GurobiCharAttributeArray
 	* Added IndexSetToCharacteristicVector
 	* Added CharacteristicVectorToIndexSet
 	* Added SubsetToCharacteristicVector
